# DeepUnderstandingOfDeepLearning

./: pyproject.toml
gradientDescent/: DUDL_GradientDescent_1D.ipynb  DUDL_MyCodeChallenge_1.ipynb
math/: DUDL_math_softmax.ipynb
python/: 10_functions.ipynb  11_numpy.ipynb  12_pandas.ipynb  13_explore_functions.ipynb  14_creating_functions.ipynb  15_scopes.ipynb  16_copies_and_references.ipynb  17_classes_and_object_orientation.ipynb  18_flow_control.ipynb  19_for_loops.ipynb  1_variables.ipynb  20_enumerate_and_zip.ipynb  21_continue.ipynb  22_init_variables.ipynb  23_list_comprehension.ipynb  24_while_loops.ipynb  25_broadcastin_numpy.ipynb  26_error_handling.ipynb  27_printing_string_interpolation.ipynb  28_plotting_dots_and_lines.ipynb  29_subplot_geometry.ipynb  2_arithmetic.ipynb  3_lists_1.ipynb  4_lists_2.ipynb  5_tuples.ipynb  6_booleans.ipynb  7_dictionaries.ipynb  8_indexing.ipynb  9_slicing.ipynb
python_basics/: initialize_variables.ipynb  list_comprehension.ipynb  lists.ipynb  math_printing.ipynb  variables.ipynb
python_slightly_advanced/: broadcasting_numpy.ipynb  continue.ipynb  for_loops.ipynb  help_on_functions.ipynb  while_loops.ipynb
python_tutorial/: enumerate_zip.ipynb  error_checking.ipynb  inputs_outputs.ipynb  libraries_numpy.ipynb  libraries_pandas.ipynb  own_functions.ipynb
transferlearning/: DUDL_transfer_resnet.ipynb
