[project]
name = "deepunderstandingofdeeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "scipy>=1.16.0",
    "scipy-stubs==1.16.0.2",
    "torch>=2.7.1",
]
